--- a/src/templates/table.html
+++ b/src/templates/table.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="col-lg-6">
     <rd-widget>
-      <rd-widget-header icon="fa-tasks" title="Striped Servers">
+      <rd-widget-header icon="fa-tasks" title="Servers">
         <a href="#">Manage</a>
       </rd-widget-header>
       <rd-widget-body classes="medium no-padding">
         <div class="table-responsive">
-          <table class="table table-striped">
+          <table class="table">
             <tbody>
               <tr><td>RDVMPC001</td><td>238.103.133.37</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
               <tr><td>RDVMPC002</td><td>68.66.63.170</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
@@ -21,7 +21,7 @@
               <tr><td>RDDomainCont01</td><td>196.80.245.33</td><td><span class="text-success"><i class="fa fa-check"></i></span></td></tr>
             </tbody>
           </table>
-        </div>
+        </div>      
       </rd-widget-body>
       <rd-widget-footer>
         <ul class="pagination pagination-sm pull-right">
@@ -29,6 +29,8 @@
           <li><a href="#">1</a></li>
           <li><a href="#">2</a></li>
           <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
           <li><a href="#">&raquo;</a></li>
         </ul>
         <div class="clearfix"></div>
