--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -11,7 +11,7 @@
         <div ng-repeat="pic in pictures" ng-hide="showFaces">
             <img src="http://10.211.70.102:5001/images/{{pic}}" class="img-thumbnail" />
         </div>
-        <div ng-repeat="pic in pictures" ng-show="showFaces">
+        <div ng-repeat="pic in facePictures" ng-show="showFaces">
             <img src="{{pic}}" class="img-thumbnail" />
         </div>
     </div>
